# agent-eval

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  test.yml
agent_eval/: __init__.py  cli.py  comparator.py  models.py  reporters.py  runner.py  scoring.py
scenarios/: calendar.yaml  database.yaml  example.yaml  multi_step.yaml  weather.yaml
tests/: test_comparator.py  test_models.py  test_providers.py  test_scoring.py
